src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_4_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
assertion_line: 20
expression: tokens
---
[
    PositionedToken {
        token: Function,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 8,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 10,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 12,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 2,
        },
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 21,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 3,
        },
        position: Position {
            line: 1,
            column: 23,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 24,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 25,
        },
    },
]
