src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_4_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Function {
                parameters: [
                    "x",
                    "y",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Plus,
                                right_hand: Identifier {
                                    identifier: "y",
                                },
                            },
                        },
                    ],
                },
            },
            arguments: [
                Integer {
                    literal: 2,
                },
                Integer {
                    literal: 3,
                },
            ],
        },
    },
]
