src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_5_environment.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "add": Function {
                    parameters: [
                        "x",
                        "y",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Plus,
                                    right_hand: Identifier {
                                        identifier: "y",
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
