src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_5_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
assertion_line: 20
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "add",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Function,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 15,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 22,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 1,
            column: 24,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "y",
        },
        position: Position {
            line: 1,
            column: 26,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 28,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 29,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "add",
        },
        position: Position {
            line: 1,
            column: 31,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 34,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 35,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 36,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "add",
        },
        position: Position {
            line: 1,
            column: 38,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 41,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 2,
        },
        position: Position {
            line: 1,
            column: 42,
        },
    },
    PositionedToken {
        token: Comma,
        position: Position {
            line: 1,
            column: 43,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 3,
        },
        position: Position {
            line: 1,
            column: 45,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 46,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 47,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 48,
        },
    },
]
