src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_6_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Call {
                function: Function {
                    parameters: [
                        "x",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Function {
                                    parameters: [
                                        "y",
                                    ],
                                    block: Block {
                                        nodes: [
                                            Expression {
                                                expression: Identifier {
                                                    identifier: "y",
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        ],
                    },
                },
                arguments: [
                    Integer {
                        literal: 1,
                    },
                ],
            },
            arguments: [
                Integer {
                    literal: 2,
                },
            ],
        },
    },
]
