src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_7_environment.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "curried": Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Function {
                                parameters: [
                                    "y",
                                ],
                                block: Block {
                                    nodes: [
                                        Expression {
                                            expression: Identifier {
                                                identifier: "y",
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                    ],
                },
            },
        },
        sub_environment: None,
    },
}
