src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_7_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "curried",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "y",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "y",
    },
    ClosingCurlyBracket,
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "curried",
    },
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    OpeningRoundBracket,
    Integer {
        literal: 2,
    },
    ClosingRoundBracket,
    SemiColon,
]
