src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_7_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "curried",
            expression: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Function {
                                parameters: [
                                    "y",
                                ],
                                block: Block {
                                    nodes: [
                                        Expression {
                                            expression: Identifier {
                                                identifier: "y",
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Call {
            function: Call {
                function: Identifier {
                    identifier: "curried",
                },
                arguments: [
                    Integer {
                        literal: 1,
                    },
                ],
            },
            arguments: [
                Integer {
                    literal: 2,
                },
            ],
        },
    },
]
