src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_8_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: tokens
---
[
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "y",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "z",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "z",
    },
    Multiply,
    Integer {
        literal: 2,
    },
    ClosingCurlyBracket,
    ClosingCurlyBracket,
    ClosingCurlyBracket,
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    OpeningRoundBracket,
    Integer {
        literal: 2,
    },
    ClosingRoundBracket,
    OpeningRoundBracket,
    Integer {
        literal: 3,
    },
    ClosingRoundBracket,
    SemiColon,
]
